<resources>
    <string name="app_name">老挂戏老叟</string>
    <string name="app_description">老挂戏老叟 - 小猿口算 LSPosed 模块</string>
    <string name="key_always_true_answer">always_true_answer</string>
    <string name="key_auto_honor">auto_honor</string>
    <string name="key_auto_practice">auto_practice</string>
    <string name="key_auto_practice_quick">auto_practice_quick</string>
    <string name="key_auto_practice_cyclic">auto_practice_cyclic</string>
    <string name="key_auto_practice_cyclic_interval">auto_practice_cyclic_interval</string>
    <string name="key_auto_answer_config">auto_answer_config</string>
    <string name="key_custom_answer_config">custom_answer_config</string>
    <string name="key_quick_mode_must_win">quick_mode_must_win</string>
    <string name="key_quick_mode_interval">quick_mode_interval</string>
    <string name="key_pk_cyclic">pk_cyclic</string>
    <string name="key_pk_cyclic_interval">pk_cyclic_interval</string>
    <string name="key_pk_fast_settle">pk_fast_settle</string>
    <string name="key_github">github</string>
    <string name="key_version">version</string>
    <string name="key_goto_settings">goto_settings</string>
    <string name="key_debug">debug</string>
    <string name="key_double_nickname_length">double_nickname_length</string>
    <string name="key_remove_restriction_on_nickname">remove_restriction_on_nickname</string>
    <string name="key_modify_answer">modify_answer</string>
    <string name="key_modify_title">modify_title</string>
    <string name="key_simian_mode">simian_mode</string>
    <string name="key_custom_answers">custom_answers</string>
    <string name="key_custom_title">custom_title</string>
    <string name="key_practice_answer">practice_answer</string>
    <string name="key_vip">vip</string>
    <!-- 抓包 / 改包 -->
    <string name="key_packet_capture">packet_capture</string>
    <string name="key_packet_rewrite">packet_rewrite</string>
    <string name="key_packet_write_file">packet_write_file</string>
    <string name="key_rewrite_rules">rewrite_rules</string>
    <!-- 屏蔽外挂/大朋友检测 -->
    <string name="key_block_risk_detect">block_risk_detect</string>
    <string name="key_block_supervision">block_supervision</string>
</resources>